<?xml version="1.0"?>
<package>
    <name>vrs2ros</name>
    <version>1.0.0</version>
    <description>
        Converts the Meta VRS format to ROS.
    </description>
    <author email="nmerrill@udel.edu">Nate Merrill</author>
    <maintainer email="nmerrill@udel.edu">Nate Merrill</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>sensor_msgs</run_depend>
</package>
